[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "persian"
version = "0.6.0"
description = "Fast, typed Python library for Persian language localization"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Reza Kamalifard", email = "mrkamalifard@gmail.com" },
]
maintainers = [
    { name = "Reza Kamalifard", email = "mrkamalifard@gmail.com" },
]
keywords = [
    "persian",
    "farsi",
    "localization",
    "i18n",
    "internationalization",
    "arabic",
    "numbers",
    "characters",
    "text-processing",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Localization",
    "Topic :: Software Development :: Internationalization",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-benchmark>=4.0.0",
    "mypy>=1.8.0",
    "black>=24.0.0",
    "ruff>=0.8.0",
    "flake8>=7.0.0",
    "isort>=5.13.0",
    "build>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/rezkam/persian"
Documentation = "https://github.com/rezkam/persian#readme"
Repository = "https://github.com/rezkam/persian"
Issues = "https://github.com/rezkam/persian/issues"
Changelog = "https://github.com/rezkam/persian/blob/main/docs/CHANGELOG.md"

[tool.setuptools]
packages = ["persian"]

[tool.setuptools.package-data]
persian = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312", "py313", "py314"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
]
ignore = [
    "E203",   # whitespace before ':' (black compatibility)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"deprecation.py" = ["F401"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=persian --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["persian"]
omit = ["*/tests/*", "*/deprecation.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
