[build-system]
requires = ["setuptools>=80.9.0", "setuptools-scm>=9.2.2"]
build-backend = "setuptools.build_meta"

[project]
name = "persian"
dynamic = ["version"]
description = "Fast, typed Python library for Persian language localization"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Reza Kamali", email = "hi@rez.nu" },
]
maintainers = [
    { name = "Reza Kamali", email = "hi@rez.nu" },
]
keywords = [
    "persian",
    "farsi",
    "localization",
    "i18n",
    "internationalization",
    "arabic",
    "numbers",
    "characters",
    "text-processing",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Localization",
    "Topic :: Software Development :: Internationalization",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-benchmark>=5.2.3",
    "ty>=0.0.11",
    "ruff>=0.14.9",
    "build>=1.3.0",
    "setuptools-scm>=9.2.2",
]
docs = [
    "sphinx>=9.0.4",
    "sphinx-autodoc-typehints>=3.6.0",
    "pydata-sphinx-theme>=0.16.1",
]

[project.urls]
Homepage = "https://github.com/rezkam/persian"
Documentation = "https://persian.readthedocs.io"
Repository = "https://github.com/rezkam/persian"
Issues = "https://github.com/rezkam/persian/issues"
Changelog = "https://github.com/rezkam/persian/releases"

[tool.setuptools]
packages = ["persian"]

[tool.setuptools.package-data]
persian = ["py.typed"]

[tool.setuptools_scm]
version_file = "persian/_version.py"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["_version.py"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "PTH",    # flake8-use-pathlib
    "PERF",   # perflint
    "RUF",    # ruff-specific rules
]
ignore = [
    "RUF001", # ambiguous unicode characters (intentional for Persian text library)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"deprecation.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["persian"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ty.environment]
python-version = "3.11"

[tool.ty.src]
include = ["persian"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=persian --cov-report=term-missing --cov-report=html --cov-report=xml"

[tool.coverage.run]
source = ["persian"]
omit = ["*/tests/*", "*/deprecation.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
